# football-players-tracking-yolo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
config/: train.yaml
config/models/: default.yaml
configs/: inference.yaml  train.yaml
configs/annotate/: default.yaml  ellipse_annotator.yaml  label_annotator.yaml  triangle_annotator.yaml
configs/common/: color_palette.yaml
configs/datasets/: default.yaml  football_player_dataset.yaml
configs/model/: default.yaml  yolo.yaml
configs/models/: auto_processor.yaml  default.yaml  siglip_vision_model.yaml  team_classifier.yaml  yolo.yaml
configs/paths/: default.yaml
configs/tracker/: bot-sort.yaml  bytetrack.yaml  default.yaml
configs/trainer/: default.yaml
notebooks/: 01_exploratory_data_analysis.ipynb  02_yolo_model_training.ipynb  03_yolo_model_inference.ipynb  04_model_training_for_different_team_players.ipynb
scripts/: video-to-giff.sh
src/: inference.py  model_trainer.py
src/models/: team_classifier.py
